--- a/index.html
+++ b/index.html
@@ -3,9 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="/assets/Inter-miami-cf-logo-1.png">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Tugas Mini Project Revou | Bagas Nuryaman</title>
 </head>
 <body>
-    
+    <nav class="Container">
+        <div class="logo-left">
+            <h2 class="J-logo">Bagas<sub>Nur</sub></h2>
+        </div>
+
+        <div class="navbar">
+            <ul class="ul-navbar">
+                <li class="li-navbar"><a href="#">Kalkulator</a></li>
+                <li class="li-navbar"><a href="#">Rumus</a></li>
+                <li class="li-navbar"><a href="#">Download</a></li>
+            </ul>
+        </div>
+
+        <div class="logo-right">
+            <div class="login-signup">
+                <span class="Jlogin">Login</span>
+                <img src="#">
+            </div>
+        </div>
+    </nav>
+    <main>
+        <header>
+            <div class="logo-center">
+                <h1 class="separator">Kalkulator<sub>BMI</sub></h1>
+            </div>
+        </header>
+       
+        <section class="Rcontainer">
+            <div class="text-right">
+                <h2 class="J-text">Cara Menghitung <span class="Jbmi">BMI</span> Dan <span class="IBjudul">Interprestasi BMI</span></h2>
+            </div>
+            <div class="table-rumus1">
+                <math mode="display" xmlns="http://www.w3.org/1998/Math/MathML">
+                    <semantics>
+                        <mrow>
+                            <mi>BMI</mi>
+                            <mo>=</mo>
+                            <mfrac>
+                                <mrow>
+                                    <mi>Berat Badan</mi>
+                                </mrow>
+                                <mrow>
+                                    <msup><mi>(Tinggi Badan)</mi><mn>2</mn></msup>
+                                </mrow>
+                            </mfrac>
+                        </mrow>
+                    </semantics>
+                </math>
+            </div>
+            <div class="bawah-text">
+                <p class="text-bawah">
+                    Berat Badan dalam kilogram (kg)
+                </p>
+                <p class="text-bawah">
+                    Tinggi Badan dalam meter(m)
+                </p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
