--- a/index.html
+++ b/index.html
@@ -9,26 +9,16 @@
     <title>Tugas Mini Project Revou | Bagas Nuryaman</title>
 </head>
 <body>
-    <nav class="Container">
-        <div class="logo-left">
-            <h2 class="J-logo">Bagas<sub>Nur</sub></h2>
-        </div>
-
-        <div class="navbar">
-            <ul class="ul-navbar">
-                <li class="li-navbar"><a href="#">Kalkulator</a></li>
-                <li class="li-navbar"><a href="#">Rumus</a></li>
-                <li class="li-navbar"><a href="#">Download</a></li>
-            </ul>
-        </div>
-
-        <div class="logo-right">
-            <div class="login-signup">
-                <span class="Jlogin">Login</span>
-                <img src="#">
-            </div>
-        </div>
-    </nav>
+   <nav class="container">
+    <div class="logo-left">
+        <i class='bx bxs-calculator'></i>
+    </div>
+    <div class="link">
+        <a href="#" class="active">About</a>
+        <a href="#">Kalkulator</a>
+        <a href="#">Rumus</a>
+    </div>
+   </nav>
     <main>
         <header>
             <div class="logo-center">
