--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
 <body>
    <nav class="container">
     <div class="logo-left">
-        <i class='bx bxs-calculator'></i>
+        <span class="main-separator">
+            Kalkulator <sub class="">BMI</sub>
+        </span>
     </div>
     <div class="link">
         <a href="#" class="active">About</a>
         <a href="#">Kalkulator</a>
         <a href="#">Rumus</a>
+    </div>
+    <div class="click">
+        <button class="Get">Get Started</button>
+        <img src="/assets/Item CryptoArt.jpg">
     </div>
    </nav>
     <main>
@@ -26,35 +32,37 @@
             </div>
         </header>
        
-        <section class="Rcontainer">
+        <section class="JRcontainer">
             <div class="text-right">
                 <h2 class="J-text">Cara Menghitung <span class="Jbmi">BMI</span> Dan <span class="IBjudul">Interprestasi BMI</span></h2>
             </div>
-            <div class="table-rumus1">
-                <math mode="display" xmlns="http://www.w3.org/1998/Math/MathML">
-                    <semantics>
-                        <mrow>
-                            <mi>BMI</mi>
-                            <mo>=</mo>
-                            <mfrac>
-                                <mrow>
-                                    <mi>Berat Badan</mi>
-                                </mrow>
-                                <mrow>
-                                    <msup><mi>(Tinggi Badan)</mi><mn>2</mn></msup>
-                                </mrow>
-                            </mfrac>
-                        </mrow>
-                    </semantics>
-                </math>
-            </div>
-            <div class="bawah-text">
-                <p class="text-bawah">
-                    Berat Badan dalam kilogram (kg)
-                </p>
-                <p class="text-bawah">
-                    Tinggi Badan dalam meter(m)
-                </p>
+            <div class="R-text">
+                <div class="table-rumus1">
+                    <math mode="display" xmlns="http://www.w3.org/1998/Math/MathML">
+                        <semantics>
+                            <mrow>
+                                <mi>BMI</mi>
+                                <mo>=</mo>
+                                <mfrac>
+                                    <mrow>
+                                        <mi>Berat Badan</mi>
+                                    </mrow>
+                                    <mrow>
+                                        <msup><mi>(Tinggi Badan)</mi><mn>2</mn></msup>
+                                    </mrow>
+                                </mfrac>
+                            </mrow>
+                        </semantics>
+                    </math>
+                </div>
+                <div class="bawah-text">
+                    <p class="text-bawah">
+                        Berat Badan dalam kilogram (kg)
+                    </p>
+                    <p class="text-bawah">
+                        Tinggi Badan dalam meter(m)
+                    </p>
+                </div>
             </div>
         </section>
     </main>
