--- a/index.html
+++ b/index.html
@@ -12,59 +12,94 @@
    <nav class="container">
     <div class="logo-left">
         <span class="main-separator">
-            Kalkulator <sub class="">BMI</sub>
+            Kalkulator <sub class="sub-1">BMI</sub>
         </span>
     </div>
     <div class="link">
-        <a href="#" class="active">About</a>
-        <a href="#">Kalkulator</a>
-        <a href="#">Rumus</a>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#text-right">Contact</a>
     </div>
     <div class="click">
-        <button class="Get">Get Started</button>
+        <a href="#Judul-M" class="Get">Get's Started</a>
         <img src="/assets/Item CryptoArt.jpg">
     </div>
    </nav>
-    <main>
-        <header>
-            <div class="logo-center">
-                <h1 class="separator">Kalkulator<sub>BMI</sub></h1>
-            </div>
-        </header>
-       
-        <section class="JRcontainer">
-            <div class="text-right">
-                <h2 class="J-text">Cara Menghitung <span class="Jbmi">BMI</span> Dan <span class="IBjudul">Interprestasi BMI</span></h2>
-            </div>
-            <div class="R-text">
-                <div class="table-rumus1">
-                    <math mode="display" xmlns="http://www.w3.org/1998/Math/MathML">
-                        <semantics>
-                            <mrow>
-                                <mi>BMI</mi>
-                                <mo>=</mo>
-                                <mfrac>
-                                    <mrow>
-                                        <mi>Berat Badan</mi>
-                                    </mrow>
-                                    <mrow>
-                                        <msup><mi>(Tinggi Badan)</mi><mn>2</mn></msup>
-                                    </mrow>
-                                </mfrac>
-                            </mrow>
-                        </semantics>
-                    </math>
-                </div>
-                <div class="bawah-text">
-                    <p class="text-bawah">
-                        Berat Badan dalam kilogram (kg)
-                    </p>
-                    <p class="text-bawah">
-                        Tinggi Badan dalam meter(m)
-                    </p>
+
+   <main>
+    <header>
+        <div class="Tcontainer">
+            <div class="center-container">
+                <div class="wrapper">
+                    <div class="Judul">
+                        <h1>Kalkulator <sup class="sup-2">BMI</sup></h1>
+                    </div>
+                    <div class="tabs">
+                        <div class="tabs-left">
+                            <a href="#separator" class="active">Kalkulator</a>
+                        </div>
+                        <div class="tabs-right">
+                        <a href="#">Rumus</a>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </section>
-    </main>
+        </div>
+    </header>
+
+    <section class="Exp-KBMI">
+        <div id="Judul-M">
+            <p class="separator-M">
+                Must read this
+            </p>
+            <div class="wrapper-p">
+                <p class="info-M">
+                    Sebelum Menggunakan Kalkulator BMI Kamu Di Harapkan Membaca Terlebih Dahulu Penjelasan Di Bawah
+                </p>
+            </div>
+        </div>
+        <div class="split-container">
+            <div class="text-left">
+                <h3 class="separator1">Kalku<sup><i class='bx bxs-calculator'></i></sup>lator<sub>BMI</sub></h3>
+                <hr>
+                <p class="main-text">
+                    Berat badan ideal merupakan dambaan setiap orang. Tak hanya memiliki bentuk tubuh yang menunjang penampilan, berat badan ideal juga menandakan kondisi tubuh yang sehat. Bagaimana dengan Anda? Yuk, hitung sekarang di kalkulator BMI.
+                </p>
+            </div>
+            <div class="text-left2">
+                <h3 class="separator">Keunggulan Fitur</h3>
+                <hr>
+                <p class="main-text">
+                    <ol class="ol-text">
+                        <li class="li-text">
+                            Menghitung Berat
+                        </li>
+                        <li class="li-text">
+                            Tentukan Kategori Berat Badanmu. Ideal atau Tidak?
+                        </li>
+                        <li class="li-text">
+                            Mempersiapkan diri untuk program penurunan berat badan
+                        </li>
+                    </ol>
+                </p>
+            </div>
+            <div class="warning">
+                <h3 class="separator">Warning!</h3>
+                <hr>
+                <p class="main-text">
+                    Kalkulator ini hanya boleh digunakan oleh orang dewasa wanita hamil atau menyusui tidak boleh mengandalkan pembacaan BMI ini dan tidak ada tindakan yang boleh diambil berdasarkan nilainya selain berkonsultasi dengan orang yang berkualifikasi seperti dokter.
+                </p>
+            </div>
+            <div class="Result">
+                <h3 class="separator">Penjelasan</h3>
+                <hr>
+                <p class="main-text">
+                    Kalkulator ini akan memberi Anda gambaran tentang perbandingan berat badan Anda dengan nilai umum. Indeks Massa Tubuh atau BMI dihitung sebagai berat badan Anda dalam kilogram dibagi dengan kuadrat tinggi badan Anda dalam meter atau BMI =kg/M<sup>2</sup> .
+                </p>
+
+            </div>
+        </div>
+    </section>
+   </main>
 </body>
 </html>
