--- a/index.html
+++ b/index.html
@@ -6,26 +6,27 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="icon" href="/assets/Inter-miami-cf-logo-1.png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Tugas Mini Project Revou | Bagas Nuryaman</title>
 </head>
 <body>
    <nav class="container">
-    <div class="logo-left">
-        <span class="main-separator">
-            Kalkulator <sub class="sub-1">BMI</sub>
-        </span>
-    </div>
-    <div class="Lwrap">
-        <div class="link">
-            <a href="#">Home</a>
-            <a href="#" class="active">About</a>
-            <a href="#text-right">Contact</a>
+        <div class="logo-left">
+            <span class="main-separator">
+                Kalkulator <sub class="sub-1">BMI</sub>
+            </span>
         </div>
-    </div>
-    <div class="click">
-        <a href="#Judul-M" class="Get">Get's Started</a>
-        <img src="/assets/Item CryptoArt.jpg">
-    </div>
+        <div class="Lwrap">
+            <div class="link">
+                <a href="#">Home</a>
+                <a href="#" class="active">About</a>
+                <a href="#text-right">Contact</a>
+            </div>
+        </div>
+        <div class="click">
+            <a href="#Judul-M" class="Get">Get's Started</a>
+            <img src="/assets/Item CryptoArt.jpg">
+        </div>
    </nav>
 
    <main>
@@ -203,15 +204,85 @@
                     <!-- Button -->
                     <section class="button">
                         <div class="btn-group">
-                            <button type="submit" class="calculate">Hitung BMI</button>
+                            <button class="calculate" onclick="calculate()">Hitung BMI</button>
                             <button type="reset" class="reset">Reset</button>
                         </div>
                     </section>
                 </form>
             </div>
-        </div>        
+        </div>
+    </section>
+    <!-- result -->
+    <section name="result">
+        <div class="h-container">
+            <div class="content-h">
+                <div class="brand-h">
+                    <span clas="h-header">
+                        Hasil
+                    </span>
+                </div>
+                <div class="kat">
+                    <span class="span-6">Masukan Data Terlebih Dahulu</span>
+                </div>
+                <div id="result">
+                    <span class="result">Masukan Data Terlebih Dahulu</span>
+                </div>
+                <div class="keterangan">
+                    <span class="keterangan">Masukan Data Terlebih Dahulu</span>
+                </div>
+                <div class="btn-download">
+                    <button type="button">Unduh Hasil BMI</button>
+                </div>
+            </div>
+            <div class="k-container">
+                <div class="content-k">
+                    <span class="span-8">Beberapa Penyakit Yang Berasal Dari Obesitas</span>
+                </div>
+                <div class="isi-CM">
+                   <p class="p-cm">Diabetes</p>
+                   <p class="p-cm">Hipertensi</p>
+                   <p class="p-cm">Penyakit Jantung</p>
+                   <p class="p-cm">Osteoarthritis</p>
+                </div> 
+                <div class="btn-group-m">
+                    <button type="submit" class="btn-m">Konsultasi Dokter Via Aplikasi</button>
+                    <button type="submit" class="btn-m">Regostrasi Online Sekarang</button>
+                </div>
+            </div>
+        </div>
     </section>
    </main>
+
+   <footer>
+    <h3>Track Your Health, Achieve Your Goals with Our BMI Calculator</h3>
+    <div class="right">
+        <div class="link">
+            <a href="#">Privacy Policy</a>
+            <a href="#">Cooperation</a>
+            <a href="#">Sponshorship</a>
+            <a href="#">Contact Us</a>
+        </div>
+        <div class="social">
+            <i id="Insta" class="fa-brands fa-instagram"></i>
+            <i id="Facebook" class="fa-brands fa-facebook"></i>
+            <i id="Whatsapp" class="fa-brands fa-whatsapp"></i>
+        </div>
+        <p>Copyright @ 2024 BagasNur, All Rights Reserved</p>
+        <div class="download">
+            <div class="header-d">
+                Unduh Aplikasi
+            </div>
+            <div class="logo-google">
+                <i class="fa-brands fa-google-play"></i>
+                <span>Google Play</span>
+            </div>
+            <div class="logo-ios">
+                <i class="fa-brands fa-apple"></i>
+                <span>App Store</span>
+            </div>
+        </div>
+   </footer>
    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+   <script src="/js/script.js"></script>
 </body>
 </html>
